--- a/vreasy/application/configs/application.ini
+++ b/vreasy/application/configs/application.ini
@@ -30,9 +30,15 @@ phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 constants.HTTP_HOST = "localhost"
 constants.HOST = "localhost"
+constants.TWILLIO_PHONE_NUM = "+17405304089"
+constants.TWILLIO_SID = "AC17a9705429f415dd8babfd8294efb00d"
+constants.TWILLIO_AUTH_TOKEN = "85780b3a49eebae184533305aad0eb94";
 
 [development : production]
 resources.frontController.params.displayExceptions = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 constants.HTTP_HOST = "vreasy.dev"
+constants.TWILLIO_PHONE_NUM = "+17405304089"
+constants.TWILLIO_SID = "AC17a9705429f415dd8babfd8294efb00d"
+constants.TWILLIO_AUTH_TOKEN = "85780b3a49eebae184533305aad0eb94";
